    * FIX: Fixed syntax error in "Single-Host Problems" view definition

    Mobile GUI:
    * FIX: commands can be executed again
    * FIX: fixed styling of buttons

    Checks & Agents:
    * FIX: Logwatch: fixed missing linebreak during reclassifing lines of logfiles

    BI:
    * FIX: make rotating folding arrows black (white was not visible)

1.2.0b3:
    Core:
    * FIX: fixed SNMP info declaration in checks: could be garbled
      up in rare cases
    * avoid duplicate parents definition, when using 'parents' and
      extra_host_conf["parents"] at the same time. The later one has
      precedence.

    Multisite:
    * Logwatch: Colorizing OK state blocks correctly
    * FIX: allow web plugins to be byte compiled (*.pyc). Those
      are preferred over *.py if existing
    * View Editor: Fixed jump to top of the page after moving painters during
      editing views
    * FIX: Fixed login redirection problem after relogging
    * Filter for times now accept ranges (from ... until)
    * New view setting for page header: repeat. This repeats the
      column headers every 20'th row.
    * FIX: Fixed problem with new eval/pickle
    * FIX: Fixed commands in host/service search views

    Checks & Agents:
    * FIX: Made logwatch parsing mechanism a little more robust
      (Had problems with emtpy sections from windows agent)
    * FIX: brocade_fcport: Configuration of portsates now possible  
    * if_lancom: special version for if64 for LANCOM devices (uses
      ifName instead of ifDescr)


    WATO:
    * Reimplemented folder listing in host/folders module
    * Redesigned the breadcrumb navigation
    * Global settings: make boolean switches directly togglable
    * New button "Recursive Inventory" on folder: Allows to do
      a recursive inventory over all hosts. Also allows to selectively
      retry only hosts that have failed in a previous inventory.
    * You can configure parents now (via a host attribute, no rules are
      neccessary).